examples/test/testpolicy8532.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8532
  namespace: namespace142
spec:
  podSelector:
    matchLabels:
      key1: value25
      key22: value40
      key28: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value46
      podSelector:
        matchLabels:
          key9: value11
          key26: value0
